--- a/02-map/index.html
+++ b/02-map/index.html
@@ -22,5 +22,6 @@
 	<script src="js/lib/leaflet-0.75.js"></script>
 	<script src="js/lib/tile.stamen-1.3.0.js"></script>
 	<script src="js/script.js"></script>
+	<script src="data/ia-breweries.json"></script>
 </body>
 </html>
