--- a/01-base/index.html
+++ b/01-base/index.html
@@ -19,9 +19,15 @@
 	<div id="map"></div>
 
 	<!-- Javascript -->
+	<!-- Libraries -->
 	<script src="js/lib/leaflet-0.75.js"></script>
 	<script src="js/lib/tile.stamen-1.3.0.js"></script>
+	
+	<!-- Our data sources -->
 	<script src="data/ia-breweries.json"></script>
+	<script src="data/ia-counties.json"></script>
+	
+	<!-- The file that creates the map -->
 	<script src="js/script.js"></script>
 </body>
 </html>
