--- a/02-final/index.html
+++ b/02-final/index.html
@@ -22,6 +22,7 @@
 	<script src="js/lib/leaflet-0.75.js"></script>
 	<script src="js/lib/tile.stamen-1.3.0.js"></script>
 	<script src="data/ia-breweries.json"></script>
+	<script src="data/ia-counties.json"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
